feat: Add QR code and improve mobile compatibility

--- a/illegal-construction-awards-main/index.html
+++ b/illegal-construction-awards-main/index.html
@@ -191,9 +191,15 @@
                         <h4>渠道说明</h4>
                         <div class="template-content">
                              <p><strong>实战证明，这是当前最直接、最有效的官方投诉方式。</strong> 它具备"留痕、可查、必复"的特点，能有效避免皮球被踢来踢去。</p>
-                             <p><strong>点击下方链接，可直接跳转至"领导留言板"小程序（建议在微信内打开）：</strong></p>
-                            <a href="#小程序://领导留言板/YWw1WGetxa48jBF" class="gov-app-link">前往"领导留言板"小程序</a>
-                             <p class="small-text">您可以在小程序中详细描述问题，并附上您拍摄的违建照片和视频证据。</p>
+                             
+                             <div class="miniprogram-access">
+                                <a href="#小程序://领导留言板/YWw1WGetxa48jBF" class="gov-app-link">微信内点击跳转</a>
+                                <div class="qrcode-container">
+                                    <img src="images/liuyanban-qrcode.jpg" alt="领导留言板小程序二维码">
+                                    <p class="small-text">或长按/扫描二维码</p>
+                                </div>
+                             </div>
+
                         </div>
                     </div>
                 </div>
